--- a/src/public/index.html
+++ b/src/public/index.html
@@ -5,6 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Express Server Docker</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+    <style>
+      #idButton {
+        float: right;
+        margin-right: 10px;
+        margin-top: 10px;
+      }
+    </style>
 </head>
 <body>
     <!-- Image and text -->
@@ -20,17 +27,17 @@
 
     <div class="input-group">
         <span class="input-group-text">Write something!</span>
-        <textarea class="form-control" aria-label="With textarea"></textarea>
+        <textarea class="form-control" aria-label="With textarea" id="idText"></textarea>
     </div>
+    <div>
+      <button type="button" class="btn btn-dark" id="idButton" onclick="sendData()">Send!</button>
 
-    <!-- <div class="d-flex justify-content-center">
-        <div class="spinner-border text-primary" role="status">
-            <span class="visually-hidden">Loading...</span>
-        </div>
-    </div> -->
+    </div>
 
     <div id="divEmotion">
 
     </div>
+
+    <script src="index.js"></script>
 </body>
 </html>
