--- a/src/public/index.html
+++ b/src/public/index.html
@@ -39,5 +39,7 @@
     </div>
 
     <script src="index.js"></script>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+
 </body>
 </html>
